# parlor-jarvis

./: .gitignore  README.md
artifacts/: 02-litert-lm-guide.md  07-benchmarks-m3-pro.md
src/: bench.py  pyproject.toml  server.py  tts.py
src/benchmarks/: bench.py  benchmark_tts.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: file-upload-skeleton.tsx  language-selector.tsx  settings-dialog.tsx  split-divider.tsx  system-prompt-editor.tsx  theme-provider.tsx  theme-toggle.tsx  voice-selector.tsx
web/lib/: settings.ts
web/lib/i18n/: messages.ts  provider.tsx
